# autoboot-data

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
autoboot_data/: __init__.py  autoboot-data-redis.schema.json
autoboot_data/redis/: __init__.py  queue.py  redis_config.py  redis_properties.py
tests/test_redis/: .env  .env.dev  autoboot.yml  test_redis.py
